--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-    "name": "dreamcommerce/shop-appstore-lib",
+    "name": "nanobo/dreamcommerce-shop-appstore-lib",
     "description": "SDK for Dreamcommerce based shops REST-API",
+    "version": "1.2.12",
     "license": "MIT",
     "require": {
-        "php": ">=5.3.0",
-        "psr/log": "^1.0"
+        "php": ">=8.1",
+        "psr/log": "^3.0"
     },
     "autoload": {
         "psr-4": {
